--- a/client/src/assets/styled/globalVariables.scss
+++ b/client/src/assets/styled/globalVariables.scss
@@ -1,5 +1,5 @@
 $font-primary: 'Poppins', sans-serif;
-$font-secondary: 'Relaway', sans-serif;
+$font-secondary: 'Raleway', sans-serif;
 
 $bgc-light: #f8f4f1;
 $bgc-grey: #f8f7f9;
