--- a/client/src/components/FooterBar/FooterBar.scss
+++ b/client/src/components/FooterBar/FooterBar.scss
@@ -1,2 +1,103 @@
+@import '../../assets/styled/globalVariables.scss';
 .footer {
+   background-color: $bgc-dark-blue;
+   padding-top: 30px;
+   padding-bottom: 46px;
+   &__top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 22px;
+      border-bottom: 1px solid #eee;
+      &--brand {
+         p {
+            color: $pink;
+            font-size: 24px;
+            font-weight: $fw-blod;
+            letter-spacing: 1px;
+            margin: 0 !important ;
+         }
+      }
+   }
+   &__inner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .btn__help {
+         color: $color-dark-blue;
+      }
+      .btn__faq {
+         color: #ffffff;
+      }
+   }
+   &__category {
+      display: flex;
+      padding-top: 45px;
+      padding-bottom: 56px;
+      .category__location {
+         margin-right: 100px;
+         p {
+            font-size: 22px;
+            max-width: 200px;
+            color: $color-grey;
+         }
+         .category__more {
+            color: $pink;
+            font-size: 18px;
+            font-weight: $fw-blod;
+            margin-top: 5px;
+            .anticon {
+               margin-left: 10px;
+            }
+         }
+         .category--social {
+            margin-top: 24px;
+            display: flex;
+            gap: 12px;
+            font-size: 22px;
+            .anticon {
+               color: $color-white;
+            }
+         }
+      }
+      .category__list {
+         display: flex;
+         &--col {
+            margin-right: 50px;
+            a {
+               line-height: $line-height-large;
+               color: $color-white;
+               font-size: 18px;
+               font-weight: $fw-light;
+               transition: all 0.25s linear;
+               &:hover {
+                  cursor: pointer;
+                  color: $pink;
+               }
+            }
+         }
+      }
+   }
+   &__bottom {
+      display: flex;
+      color: $color-grey;
+      &--coppyright {
+         margin-right: 138px;
+      }
+      &--policy {
+         ul {
+            display: flex;
+            gap: 22px;
+            li {
+               a {
+                  color: $color-grey;
+                  transition: all 0.25s linear;
+                  &:hover {
+                     color: $bgc-light;
+                  }
+               }
+            }
+         }
+      }
+   }
 }
