fix: 🐛 Button global component style

--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/styled/globalVariables.scss';
+@import '../../assets/styled/globalVariables.scss';
 .btn {
    display: block;
    border-radius: 45px;
