feat: 🎸 update global variables scss

--- a/client/src/assets/styled/globalVariables.scss
+++ b/client/src/assets/styled/globalVariables.scss
@@ -24,3 +24,9 @@ $line-height-large: 1.8;
 $fw-blod: 700;
 $fw-normal: 400;
 $fw-light: 300;
+
+$fz-base: 14px;
+$fz-small: 12px;
+$fz-large: 16px;
+$fz-xlarge: 20px;
+$fz-xxlarge: 24px;
