feat: 🎸 implement navigation-bar

--- a/client/src/assets/styled/globalVariables.scss
+++ b/client/src/assets/styled/globalVariables.scss
@@ -8,7 +8,7 @@ $bgc-pink: #ff5857;
 $bgc-blue: #5959d9;
 $bgc-dark-blue: #000a47;
 
-$puple: #9d59d9;
+$purple: #9d59d9;
 $pink: #ff6160;
 $yellow: #d2bd74;
 
@@ -21,7 +21,7 @@ $line-height-base: 1.5;
 $line-height-small: 1.2;
 $line-height-large: 1.8;
 
-$fw-blod: 700;
+$fw-bold: 700;
 $fw-normal: 400;
 $fw-light: 300;
 
