--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -6,13 +6,13 @@
    border: none;
    outline: none;
    font-size: 16px;
-   font-weight: $fw-blod;
+   font-weight: $fw-bold;
    transition: all 0.25s linear;
    &__blue {
       background-color: $bgc-blue;
    }
    &__purple {
-      background-color: $puple;
+      background-color: $purple;
    }
    &__white {
       background-color: $bgc-white;
