--- a/client/src/components/Logo/Logo.scss
+++ b/client/src/components/Logo/Logo.scss
@@ -4,7 +4,7 @@
    p {
       color: $pink;
       font-size: 24px;
-      font-weight: $fw-blod;
+      font-weight: $fw-bold;
       letter-spacing: 1px;
       margin: 0 !important ;
    }
