--- a/client/src/features/Home/components/SearchForm/SearchForm.scss
+++ b/client/src/features/Home/components/SearchForm/SearchForm.scss
@@ -9,7 +9,6 @@
       min-width: 120px;
       border-radius: inherit;
       margin-right: 10px;
-      background-color: $bgc-grey;
    }
    &__input {
       width: 100%;
@@ -42,8 +41,13 @@
       cursor: pointer;
       flex: none;
       margin-left: 15px;
+      color: $color-white;
    }
    .ant-select:not(.ant-select-customize-input) .ant-select-selector {
       border-radius: inherit;
+      border: none;
+   }
+   .ant-select-selector {
+      background-color: $bgc-grey !important;
    }
 }
