fix: 🐛 fix conflic at develop

--- a/client/src/assets/styled/globalVariables.scss
+++ b/client/src/assets/styled/globalVariables.scss
@@ -8,7 +8,7 @@ $bgc-pink: #ff5857;
 $bgc-blue: #5959d9;
 $bgc-dark-blue: #000a47;
 
-$puple: #9d59d9;
+$purple: #9d59d9;
 $pink: #ff6160;
 $yellow: #d2bd74;
 
@@ -21,6 +21,12 @@ $line-height-base: 1.5;
 $line-height-small: 1.2;
 $line-height-large: 1.8;
 
-$fw-blod: 700;
+$fw-bold: 700;
 $fw-normal: 400;
 $fw-light: 300;
+
+$fz-base: 14px;
+$fz-small: 12px;
+$fz-large: 16px;
+$fz-xlarge: 20px;
+$fz-xxlarge: 24px;
