--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -3,7 +3,7 @@ html,
 body {
    box-sizing: border-box;
    font-family: $font-primary;
-   font-size: 14px;
+   font-size: $fz-base;
    line-height: $line-height-base;
    color: $color-dark;
 }
@@ -35,4 +35,7 @@ a {
 img {
    display: block;
    max-width: 100%;
+}
+li {
+   list-style: none;
 }
