feat: 🎸 implement Books details

--- a/client/src/components/NavigationBar/HeaderNavigation/HeaderNavigation.scss
+++ b/client/src/components/NavigationBar/HeaderNavigation/HeaderNavigation.scss
@@ -1,4 +1,4 @@
-@import '../../../../assets/styled/globalVariables.scss';
+@import '../../../assets/styled/globalVariables.scss';
 .header__navigation {
    ul {
       display: flex;
