--- a/client/src/assets/styled/globalVariables.scss
+++ b/client/src/assets/styled/globalVariables.scss
@@ -16,6 +16,7 @@ $color-dark: #000036;
 $color-dark-blue: #000a47;
 $color-white: #ffffff;
 $color-grey: #7e818d;
+$color-blue: #5959d9;
 
 $line-height-base: 1.5;
 $line-height-small: 1.2;
