--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -32,6 +32,13 @@
          box-shadow: 0 0 0 6px $bgc-dark-blue;
       }
    }
+   &--color--white {
+      color: $color-white;
+   }
+   &__view {
+      color: $color-white;
+      font-weight: $fw-normal;
+   }
    &:hover {
       transform: translate(-2px, -2px);
    }
