feat: 🎸 add api of book resource interface into client

--- a/client/src/features/BookDetail/components/BookImages/BookImages.scss
+++ b/client/src/features/BookDetail/components/BookImages/BookImages.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styled/globalVariables.scss';
+@import "../../../../assets/styled/globalVariables.scss";
 .book__image {
    display: flex;
    justify-content: center;
