--- a/client/src/features/BookDetail/components/BookInfos/BookInfos.scss
+++ b/client/src/features/BookDetail/components/BookInfos/BookInfos.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styled/globalVariables.scss';
+@import "../../../../assets/styled/globalVariables.scss";
 .book {
    &__infos {
       // width: 100%;
