--- a/client/src/features/BookDetail/components/MoreBooks/MoreBooks.scss
+++ b/client/src/features/BookDetail/components/MoreBooks/MoreBooks.scss
@@ -1,4 +1,4 @@
-@import '../../../../../assets/styled/globalVariables.scss';
+@import "../../../../assets/styled/globalVariables.scss";
 .more__books {
    margin-top: 50px;
    padding-bottom: 60px;
