--- a/client/src/features/BookDetail/pages/BookDetailPage/BookImages/BookImages.scss
+++ b/client/src/features/BookDetail/pages/BookDetailPage/BookImages/BookImages.scss
@@ -11,6 +11,9 @@
          border-radius: 6px;
          aspect-ratio: 3 / 4;
          object-fit: cover;
+         @media screen and (max-width: 992px) {
+            max-width: unset;
+         }
       }
    }
    &--lib {
