--- a/client/src/features/BookDetail/pages/BookDetailPage/MoreBooks/MoreBooks.scss
+++ b/client/src/features/BookDetail/pages/BookDetailPage/MoreBooks/MoreBooks.scss
@@ -6,32 +6,30 @@
       padding: 20px 0;
    }
    &--list {
+      --f-columns: 5;
+      --f-gap: 20px;
       display: flex;
-      gap: 16px;
-   }
-   @media screen and (max-width: 767px) {
-      &--list {
-         display: grid;
-         justify-content: flex-start;
-         grid-auto-columns: 40%;
-         grid-auto-flow: column;
-         grid-gap: 1.5rem;
-         overflow: auto;
-         overflow-y: hidden;
-         scroll-snap-type: x mandatory;
-         scroll-snap-stop: always;
-         -ms-touch-action: manipulation;
-         touch-action: manipulation;
-         -webkit-overflow-scrolling: touch;
-         scroll-padding: 1rem;
-         grid-template-columns: unset;
+      flex-wrap: wrap;
+      margin-left: calc(-1 * var(--f-gap));
+      margin-bottom: calc(-1 * var(--f-gap));
+      > * {
+         max-width: unset;
+         margin-left: var(--f-gap);
+         margin-bottom: var(--f-gap);
+         width: calc((100% / var(--f-columns) - var(--f-gap)));
       }
-      &--list::-webkit-scrollbar {
-         display: none;
-         width: 0;
+      @media screen and (max-width: 1098px) {
+         --f-columns: 4;
       }
-      &--list > * {
-         scroll-snap-align: start;
+      @media screen and (max-width: 885px) {
+         --f-columns: 3;
+      }
+      @media screen and (max-width: 700px) {
+         --f-columns: 2;
+      }
+      @media screen and (max-width: 439px) {
+         --f-columns: 1;
+         justify-content: center;
       }
    }
 }
