--- a/client/src/features/Home/pages/HomePage/Subcriber/Subcriber.scss
+++ b/client/src/features/Home/pages/HomePage/Subcriber/Subcriber.scss
@@ -58,5 +58,8 @@
             font-weight: $fw-bold;
          }
       }
+      @media screen and (max-width: 767px) {
+         flex-direction: column;
+      }
    }
 }
