--- a/client/src/components/Book/Book.scss
+++ b/client/src/components/Book/Book.scss
@@ -4,6 +4,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      height: 100%;
       max-width: 250px;
       // min-width: 180px;
       padding: 25px 10px;
