--- a/client/src/features/Home/pages/HomePage/TakeEverything/TakeEverything.scss
+++ b/client/src/features/Home/pages/HomePage/TakeEverything/TakeEverything.scss
@@ -15,6 +15,9 @@
          border-radius: 6px;
          object-fit: cover;
          aspect-ratio: 3/4;
+         @media screen and (max-width: 820px) {
+            display: none;
+         }
       }
       &--inner {
          &--title {
@@ -33,14 +36,22 @@
             margin-bottom: 36px;
          }
       }
+      @media screen and (max-width: 820px) {
+         flex-direction: column-reverse;
+         background-image: url(https://images.unsplash.com/photo-1519682337058-a94d519337bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+         background-attachment: fixed;
+         padding: 100px 0;
+      }
    }
    &--bottom {
       display: flex;
+      flex-wrap: wrap;
       gap: 20px;
       margin-top: 70px;
       .take__item {
          display: flex;
          gap: 20px;
+         width: calc(100% / 4 - 20px);
          &--index {
             width: 30px;
             height: 30px;
@@ -61,6 +72,12 @@
                font-weight: $fw-bold;
                font-size: $fz-xlarge;
             }
+         }
+         @media screen and (max-width: 1024px) {
+            width: calc(100% / 2 - 20px);
+         }
+         @media screen and (max-width: 767px) {
+            width: 100%;
          }
       }
    }
