--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styled/globalVariables.scss';
+@import "../../assets/styled/globalVariables.scss";
 .btn {
    display: block;
    border-radius: 45px;
@@ -17,12 +17,16 @@
    &__white {
       background-color: $bgc-white;
    }
+   &__rate {
+      background-color: $pink;
+      color: $color-white;
+   }
    &__dot {
       color: $color-dark-blue;
       position: relative;
       &::before {
          position: absolute;
-         content: '';
+         content: "";
          width: 10px;
          height: 10px;
          border-radius: 100rem;
