--- a/client/src/features/Home/pages/HomePage/BestBooks/BestBooks.scss
+++ b/client/src/features/Home/pages/HomePage/BestBooks/BestBooks.scss
@@ -2,22 +2,19 @@
 .section__bestbooks {
    padding: 40px 0 60px;
    &--list {
+      --f-columns: 5;
+      --f-gap: 20px;
+      display: flex;
+      flex-wrap: nowrap;
+      margin-left: calc(-1 * var(--f-gap));
+      margin-bottom: calc(-1 * var(--f-gap));
+      overflow-x: auto;
       > * {
          max-width: unset;
+         min-width: 200px;
+         margin-left: var(--f-gap);
+         margin-bottom: var(--f-gap);
+         width: calc((100% / var(--f-columns) - var(--f-gap)));
       }
-   }
-   .slick-list {
-      margin: 0 -5px;
-   }
-   .slick-slide > div {
-      padding: 10px 5px;
-      height: 100% !important;
-   }
-   .slick-track {
-      display: flex !important;
-   }
-
-   .slick-slide {
-      height: inherit !important;
    }
 }
