fix: 🐛 reponsive home page

--- a/client/src/components/NavigationBar/User/user.scss
+++ b/client/src/components/NavigationBar/User/user.scss
@@ -5,6 +5,7 @@
    align-items: center;
    background-color: $bgc-pink;
    padding: 6px;
+   padding-right: 10px;
    border-radius: 100rem;
    max-width: 150px;
    .ant-avatar {
