fix: 🐛 responsive book detail

--- a/client/src/features/BookDetail/components/BookInfos/BookInfos.scss
+++ b/client/src/features/BookDetail/components/BookInfos/BookInfos.scss
@@ -18,6 +18,15 @@
          color: $color-grey;
          margin-bottom: 40px;
          max-width: 400px;
+         @media screen and (max-width: 767px) {
+            text-align: justify;
+         }
+      }
+      @media screen and (max-width: 767px) {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         flex-direction: column;
       }
    }
 }
